testcases/pos/batch/let_val_annotated.bard
let val x: Int = 42 in x end
