testcases/neg/eval/valdecl_wrong_type.bard
let val x: Int = true
in x end
